@@ -2,7 +2,7 @@
 #  Part of the R package, https://www.R-project.org
 #
 #  Copyright (C) 1998 B. D. Ripley
-#  Copyright (C) 1998-2015 The R Core Team
+#  Copyright (C) 1998-2016 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -29,40 +29,47 @@ dummy.coef.lm <- function(object, use.na=FALSE, ...)
     int <- attr(Terms, "intercept")
     facs <- attr(Terms, "factors")[-1, , drop=FALSE]
     Terms <- delete.response(Terms)
-    vars <- all.vars(Terms) # e.g. drops I(.), ...
-    nxl <- setNames(rep.int(1, length(vars)), vars)
-    tmp <- lengths(xl)
-    nxl[names(tmp)] <- tmp
+    mf <- object$model
+    if (is.null(mf)) mf <- model.frame(object)
+    vars <- dimnames(facs)[[1]] # names
+    xtlv <- lapply(mf[,vars, drop=FALSE], levels) ## levels
+    nxl <- pmax(lengths(xtlv), 1L)  ## (named) number of levels
     lterms <- apply(facs, 2L, function(x) prod(nxl[x > 0]))
     nl <- sum(lterms)
-    args <- setNames(vector("list", length(vars)), vars)
-    for(i in vars)
-	args[[i]] <- if(nxl[[i]] == 1) rep.int(1, nl)
-	else factor(rep.int(xl[[i]][1L], nl), levels = xl[[i]])
-    dummy <- do.call("data.frame", args)
-    pos <- 0
+    ## dummy: data frame of vars
+    args <- sapply(vars, function(i)
+	if (nxl[i] == 1) rep.int(1, nl)
+	else factor(rep.int(xtlv[[i]][1L], nl), levels = xtlv[[i]]),
+	simplify=FALSE)
+    ## dummy <- as.data.frame(args) # slightly more efficiently:
+    dummy <- do.call(data.frame, args); names(dummy) <- vars
+    pos <- 0L
     rn <- rep.int(tl, lterms)
-    rnn <- rep.int("", nl)
+    rnn <- character(nl) # all "" --- will be names of rows
     for(j in tl) {
 	i <- vars[facs[, j] > 0]
 	ifac <- i[nxl[i] > 1]
+	lt.j <- lterms[[j]]
 	if(length(ifac) == 0L) {        # quantitative factor
-	    rnn[pos+1] <- j
-	} else if(length(ifac) == 1L) {	# main effect
-	    dummy[ pos+1L:lterms[j], ifac ] <- xl[[ifac]]
-	    rnn[ pos+1L:lterms[j] ] <- as.character(xl[[ifac]])
-	} else {			# interaction
-	    tmp <- expand.grid(xl[ifac])
-	    dummy[ pos+1L:lterms[j], ifac ] <- tmp
-	    rnn[ pos+1L:lterms[j] ] <-
-		apply(as.matrix(tmp), 1L, function(x) paste(x, collapse=":"))
+	    rnn[pos+1L] <- j
+	} else {
+	    p.j <- pos + seq_len(lt.j)
+	    if(length(ifac) == 1L) {	# main effect
+		dummy[p.j, ifac] <- x.i <- xtlv[[ifac]]
+		rnn[p.j] <- as.character(x.i)
+	    } else {			# interaction
+		tmp <- expand.grid(xtlv[ifac], KEEP.OUT.ATTRS=FALSE)
+		dummy[p.j, ifac] <- tmp
+		rnn[p.j] <- apply(as.matrix(tmp), 1L, paste, collapse = ":")
+	    }
 	}
-	pos <- pos + lterms[j]
+	pos <- pos + lt.j
     }
-    ## some terms like poly(x,1) will give problems here, so allow
-    ## NaNs and set to NA afterwards.
-    mf <- model.frame(Terms, dummy, na.action=function(x)x, xlev=xl)
-    mm <- model.matrix(Terms, mf, object$contrasts, xl)
+    attr(dummy,"terms") <- attr(mf,"terms")
+    lcontr <- object$contrasts
+    lci <- vapply(dummy, is.factor, NA)
+    lcontr <- lcontr[names(lci)[lci]] ## factors with 1 level have disappeared (?)
+    mm <- model.matrix(Terms, dummy, lcontr, xl)
     if(anyNA(mm)) {
         warning("some terms will have NAs due to the limits of the method")
         mm[is.na(mm)] <- NA
@@ -72,10 +79,17 @@ dummy.coef.lm <- function(object, use.na=FALSE, ...)
     asgn <- attr(mm,"assign")
     res <- setNames(vector("list", length(tl)), tl)
     for(j in seq_along(tl)) {
-	keep <- asgn == j
-	ij <- rn == tl[j]
-	res[[j]] <-
-	    setNames(drop(mm[ij, keep, drop=FALSE] %*% coef[keep]), rnn[ij])
+         keep <- which(asgn == j)
+         cf <- coef[keep]
+         ij <- rn == tl[j]
+         res[[j]] <-
+	     if (any(na <- is.na(cf))) {
+		 rj <- setNames(drop(mm[ij, keep[!na], drop = FALSE] %*%
+				      cf[!na]), rnn[ij])
+		 rj[apply(mm[ij, keep[na], drop=FALSE] != 0, 1L, any)] <- NA
+		 rj
+	     } else
+		 setNames(drop(mm[ij, keep, drop = FALSE] %*% cf), rnn[ij])
     }
     if(int > 0) {
 	res <- c(list("(Intercept)" = coef[int]), res)
@@ -86,49 +100,54 @@ dummy.coef.lm <- function(object, use.na=FALSE, ...)
 
 dummy.coef.aovlist <- function(object, use.na = FALSE, ...)
 {
+    xl <- attr(object, "xlevels")
+    if(!length(xl)) # no factors in model
+	return(as.list(coef(object)))
     Terms <- terms(object, specials="Error")
     err <- attr(Terms,"specials")$Error - 1
     tl <- attr(Terms, "term.labels")[-err]
     int <- attr(Terms, "intercept")
     facs <- attr(Terms, "factors")[-c(1,1+err), -err, drop=FALSE]
-    vars <- rownames(facs)
-    xl <- attr(object, "xlevels")
-    if(!length(xl)) {			# no factors in model
-	return(as.list(coef(object)))
-    }
-    nxl <- setNames(rep.int(1, length(vars)), vars)
-    tmp <- lengths(xl)
-    nxl[names(tmp)] <- tmp
+    mf <- object$model
+    if (is.null(mf)) mf <- model.frame(object)
+    vars <- dimnames(facs)[[1]] # names
+    xtlv <- lapply(mf[,vars, drop=FALSE], levels) ## levels
+    nxl <- pmax(lengths(xtlv), 1L)  ## (named) number of levels
     lterms <- apply(facs, 2L, function(x) prod(nxl[x > 0]))
     nl <- sum(lterms)
     args <- setNames(vector("list", length(vars)), vars)
     for(i in vars)
 	args[[i]] <- if(nxl[[i]] == 1) rep.int(1, nl)
-	else factor(rep.int(xl[[i]][1L], nl), levels = xl[[i]])
-    dummy <- do.call("data.frame", args)
-    pos <- 0
+                     else factor(rep.int(xl[[i]][1L], nl), levels = xl[[i]])
+    ## dummy <- as.data.frame(args) # slightly more efficiently:
+    dummy <- do.call(data.frame, args); names(dummy) <- vars
+    pos <- 0L
     rn <- rep.int(tl, lterms)
-    rnn <- rep.int("", nl)
+    rnn <- character(nl) # all "" --- will be names of rows
     for(j in tl) {
 	i <- vars[facs[, j] > 0]
 	ifac <- i[nxl[i] > 1]
+	lt.j <- lterms[[j]]
 	if(length(ifac) == 0L) {        # quantitative factor
-	    rnn[pos + 1] <- j
-	} else if(length(ifac) == 1L) {	# main effect
-	    dummy[ pos+1L:lterms[j], ifac ] <- xl[[ifac]]
-	    rnn[ pos+1L:lterms[j] ] <- as.character(xl[[ifac]])
-	} else {			# interaction
-	    tmp <- expand.grid(xl[ifac])
-	    dummy[ pos+1L:lterms[j], ifac ] <- tmp
-	    rnn[ pos+1L:lterms[j] ] <-
-		apply(as.matrix(tmp), 1L, function(x) paste(x, collapse=":"))
-	}
-	pos <- pos + lterms[j]
+	    rnn[pos+1L] <- j
+	} else {
+	    p.j <- pos + seq_len(lt.j)
+	    if(length(ifac) == 1L) {	# main effect
+		dummy[p.j, ifac] <- x.i <- xtlv[[ifac]]
+		rnn[p.j] <- as.character(x.i)
+	    } else {			# interaction
+		tmp <- expand.grid(xtlv[ifac], KEEP.OUT.ATTRS=FALSE)
+		dummy[p.j, ifac] <- tmp
+		rnn[p.j] <- apply(as.matrix(tmp), 1L, paste, collapse = ":")
+	    }
+        }
+	pos <- pos + lt.j
     }
-    form <- paste("~", paste(tl, collapse = " + "))
-    if (!int) form <- paste(form, "- 1")
-    mm <- model.matrix(terms(formula(form)), dummy,
-		       attr(object, "contrasts"), xl)
+    form <- paste0("~", paste0(tl, collapse = " + "), if(!int) "- 1")
+    lcontr <- object$contrasts
+    lci <- vapply(dummy, is.factor, NA)
+    lcontr <- lcontr[names(lci)[lci]] ## factors with 1 level have disappeared
+    mm <- model.matrix(terms(formula(form)), dummy, lcontr, xl)
     tl <- c("(Intercept)", tl)
     res <- setNames(vector("list", length(object)), names(object))
     allasgn <- attr(mm, "assign")
@@ -137,17 +156,23 @@ dummy.coef.aovlist <- function(object, use.na = FALSE, ...)
 	if(!use.na) coef[is.na(coef)] <- 0
 	asgn <- object[[i]]$assign
 	uasgn <- unique(asgn)
-	tll <- tl[1 + uasgn]
+	tll <- tl[1L + uasgn]
 	mod <- setNames(vector("list", length(tll)), tll)
 	for(j in uasgn) {
-	    mod[[tl[1+j]]] <-
+	    keep <- which(asgn == j)
+	    cf <- coef[keep]
+	    mod[[tl[j+1L]]] <-
 		if(j == 0) {
-		    structure(coef[asgn == j], names="(Intercept)")
+		    structure(cf, names="(Intercept)")
 		} else {
-		    ij <- rn == tl[1+j]
-		    setNames(drop(mm[ij, allasgn == j, drop=FALSE] %*%
-				  coef[asgn == j]),
-			     rnn[ij])
+		    ij <- rn == tl[j+1L]
+		    if (any(na <- is.na(cf))) {
+			rj <- setNames(drop(mm[ij, keep[!na], drop = FALSE] %*%
+					    cf[!na]), rnn[ij])
+			rj[apply(mm[ij, keep[na], drop=FALSE] != 0, 1L, any)] <- NA
+			rj
+		    } else
+			setNames(drop(mm[ij, allasgn == j, drop=FALSE] %*% cf), rnn[ij])
 		}
 	}
 	res[[i]] <- mod
@@ -162,24 +187,23 @@ print.dummy_coef <- function(x, ..., title)
     n <- length(x)
     nm <- max(lengths(x))
     ans <- matrix("", 2L*n, nm)
-    rn <- rep.int("", 2L*n)
-    line <- 0
+    rn <- character(2L*n) # ""
+    line <- 0L
     for (j in seq_len(n)) {
 	this <- x[[j]]
 	n1 <- length(this)
 	if(n1 > 1) {
-	    line <- line + 2
-	    ans[line-1, 1L:n1] <- names(this)
-	    ans[line, 1L:n1] <- format(this, ...)
-	    rn[line-1] <- paste0(terms[j], ":   ")
+	    line <- line + 2L
+	    ans[line-1L, 1L:n1] <- names(this)
+	    ans[line,    1L:n1] <- format(this, ...)
+	    rn [line-1L] <- paste0(terms[j], ":   ")
 	} else {
-	    line <- line + 1
+	    line <- line + 1L
 	    ans[line, 1L:n1] <- format(this, ...)
 	    rn[line] <- paste0(terms[j], ":   ")
 	}
     }
-    rownames(ans) <- rn
-    colnames(ans) <- rep.int("", nm)
+    dimnames(ans) <- list(rn, character(nm))
     cat(if(missing(title)) "Full coefficients are" else title, "\n")
     print(ans[1L:line, , drop=FALSE], quote=FALSE, right=TRUE)
     invisible(x)
